--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 	<modules>
         <module>jatf-core</module>
         <module>jatf-tests</module>
+        <module>jatf-live</module>
     </modules>
 
     <properties>
