--- a/jatf-live/pom.xml
+++ b/jatf-live/pom.xml
@@ -40,8 +40,8 @@
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tapestry</groupId>
