--- a/jatf-live/pom.xml
+++ b/jatf-live/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.github.duke2k.jatf</groupId>
             <artifactId>jatf-tests</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
@@ -90,7 +90,9 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
