--- a/jatf-rules/pom.xml
+++ b/jatf-rules/pom.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+ This file is part of JATF.
+
+ JATF is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, version 3 of the License.
+
+ JATF is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with JATF.  If not, see <http://www.gnu.org/licenses/>.
+-->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -11,6 +26,24 @@
 
     <artifactId>jatf-rules</artifactId>
     <name>Java Architecture Test Framework - Standard Rule Generators</name>
+    <description>The Java Architecture Test Framework (JATF) allows static code analysis within unit tests. This is the
+        rule generators project, containing default, "best practice" rule generators for any class provided.
+    </description>
+    <url>https://github.com/Duke2k/jatf</url>
+    <licenses>
+        <license>
+            <name>GPLv3</name>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Samuel Eickelberg</name>
+        </developer>
+    </developers>
+    <contributors/>
+    <organization>
+        <name>Freie Universität Berlin and Anybet GmbH, Berlin, Germany</name>
+    </organization>
 
     <dependencies>
         <dependency>
