--- a/jatf-core/pom.xml
+++ b/jatf-core/pom.xml
@@ -41,24 +41,9 @@
     <parent>
         <groupId>com.github.duke2k.jatf</groupId>
         <artifactId>jatf-project</artifactId>
-        <version>1.0.4.7</version>
+        <version>1.0.4.8</version>
     </parent>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <root.folder>${jatf.root}</root.folder>
-        <scopes>${jatf.scopes}</scopes>
-        <instability.strict>${jatf.instability.strict}</instability.strict>
-        <instability.loose>${jatf.instability.loose}</instability.loose>
-        <cyclomatic-complexity.maximum>${jatf.cyclomatic-complexity.maximum}</cyclomatic-complexity.maximum>
-        <halstead-delivered-bugs.maximum>${jatf.halstead-delivered-bugs.maximum}</halstead-delivered-bugs.maximum>
-        <methods-per-class.maximum>${jatf.methods-per-class.maximum}</methods-per-class.maximum>
-        <statements-per-method.maximum>${jatf.statements-per-method.maximum}</statements-per-method.maximum>
-        <depth-for-dfs.maximum>${jatf.depth-for-dfs.maximum}</depth-for-dfs.maximum>
-        <degree-of-purity.minimum>${jatf.degree-of-purity.minimum}</degree-of-purity.minimum>
-        <chained-method-calls.maximum>${jatf.chained-method-calls.maximum}</chained-method-calls.maximum>
-    </properties>
-
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -68,7 +53,7 @@
         <dependency>
             <groupId>com.tngtech.java</groupId>
             <artifactId>junit-dataprovider</artifactId>
-            <version>1.9.4</version>
+            <version>1.10.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -87,13 +72,18 @@
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.0</version>
+            <artifactId>annotations</artifactId>
+            <version>3.0.1u2</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.javaparser</groupId>
             <artifactId>javaparser</artifactId>
             <version>1.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.2.RELEASE</version>
         </dependency>
     </dependencies>
 
