--- a/jatf-core/pom.xml
+++ b/jatf-core/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-context</artifactId>
             <version>4.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
