--- a/jatf-graph/pom.xml
+++ b/jatf-graph/pom.xml
@@ -23,7 +23,8 @@
     <name>Java Architecture Test Framework - Graph DB Connector</name>
 
     <description>The Java Architecture Test Framework (JATF) allows static code analysis within unit tests. This is the
-        core project, delivering all required functionality.
+        graph database connector, providing Neo4j support. Since we're still developing on JDK 1.6, only version up to
+        1.9.9 of Neo4j is supported. This will be update once the project is switched to Java 8.
     </description>
     <url>https://github.com/Duke2k/jatf</url>
     <licenses>
@@ -47,13 +48,51 @@
         <version>1.0.4.9</version>
     </parent>
 
+    <properties>
+        <neo4j.host>${neo4j.host}</neo4j.host>
+        <neo4j.port>${neo4j.port}</neo4j.port>
+        <neo4j.user>${neo4j.user}</neo4j.user>
+        <neo4j.pass>${neo4j.pass}</neo4j.pass>
+        <neo4j.url>http://${neo4j.host}:${neo4j.port}</neo4j.url>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
-            <version>2.3.0</version>
+            <version>1.9.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j</artifactId>
+            <version>3.2.1.RELEASE</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <neo4j.host>localhost</neo4j.host>
+                <neo4j.port>7474</neo4j.port>
+                <neo4j.user>admin</neo4j.user>
+                <neo4j.pass>admin</neo4j.pass>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <resources>
