--- a/jatf-core/pom.xml
+++ b/jatf-core/pom.xml
@@ -41,7 +41,7 @@
     <parent>
         <groupId>com.github.duke2k.jatf</groupId>
         <artifactId>jatf-project</artifactId>
-        <version>1.0.4.12</version>
+        <version>${jatf.version}</version>
     </parent>
     
     <dependencies>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>com.tngtech.java</groupId>
             <artifactId>junit-dataprovider</artifactId>
-            <version>1.10.1</version>
+            <version>1.11.0</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
@@ -78,12 +78,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.2.2.RELEASE</version>
+            <version>4.2.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.4</version>
+            <version>2.6.2</version>
         </dependency>
     </dependencies>
 
