--- a/jatf-live/pom.xml
+++ b/jatf-live/pom.xml
@@ -44,11 +44,11 @@
     <parent>
         <groupId>com.github.duke2k.jatf</groupId>
         <artifactId>jatf-project</artifactId>
-        <version>1.0.4.12</version>
+        <version>${jatf.version}</version>
     </parent>
 
     <properties>
-        <tapestry-release-version>5.3.8</tapestry-release-version>
+        <tapestry-release-version>5.4.1</tapestry-release-version>
     </properties>
 
     <dependencies>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.apache.tapestry</groupId>
             <artifactId>tapestry-yuicompressor</artifactId>
-            <version>${tapestry-release-version}</version>
+            <version>5.3.8</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tapestry</groupId>
