--- a/jatf-tests/pom.xml
+++ b/jatf-tests/pom.xml
@@ -41,7 +41,7 @@
     <parent>
         <groupId>com.github.duke2k.jatf</groupId>
         <artifactId>jatf-project</artifactId>
-        <version>1.0.4.12</version>
+        <version>${jatf.version}</version>
     </parent>
 
     <properties>
