--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <packaging>pom</packaging>
 
     <name>Java Architecture Test Framework</name>
-    <version>1.0.4.12</version>
+    <version>${jatf.version}</version>
 
     <description>The Java Architecture Test Framework (JATF) allows static code analysis within unit tests. This is the root project, POM only.</description>
     <url>https://github.com/Duke2k/jatf</url>
@@ -52,6 +52,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <jatf.version>1.0.5.0</jatf.version>
     </properties>
 
 </project>
