--- a/jatf-tests/src/main/resources/jatf-test.properties
+++ b/jatf-tests/src/main/resources/jatf-test.properties
@@ -1,3 +1,17 @@
+# This file is part of JATF.
+#
+# JATF is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, version 3 of the License.
+#
+# JATF is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with JATF.  If not, see <http://www.gnu.org/licenses/>.
+
 namePattern.for.classes=([A-Z]+[a-z0-9]*)+
 namePattern.for.methods=[a-z]+([A-Z]*[a-z0-9]*[_]?)*
 namePattern.for.fields=[a-z]+([A-Z]*[a-z0-9]*)*
