--- a/jatf-tests/pom.xml
+++ b/jatf-tests/pom.xml
@@ -31,12 +31,9 @@
     <developers>
         <developer>
             <name>Samuel Eickelberg</name>
+            <email>samuel.eickelberg@posteo.de</email>
         </developer>
     </developers>
-    <contributors />
-    <organization>
-        <name>Freie Universität Berlin and Anybet GmbH, Berlin, Germany</name>
-    </organization>
 
     <parent>
         <groupId>com.github.duke2k.jatf</groupId>
