--- a/jatf-rules/pom.xml
+++ b/jatf-rules/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>jatf-project</artifactId>
         <groupId>com.github.duke2k.jatf</groupId>
-        <version>${jatf.version}</version>
+        <version>1.0.5.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
