--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<packaging>pom</packaging>
 
 	<name>Java Architecture Test Framework</name>
-	<version>1.0.6</version>
+	<version>1.0.7-SNAPSHOT</version>
 
 	<description>The Java Architecture Test Framework (JATF) allows static code analysis within unit tests. This is the
 		root project, POM only.
