--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 		</developer>
 	</developers>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.0.RELEASE</version>
+	</parent>
+
 	<modules>
 		<module>jatf-core</module>
 		<module>jatf-tests</module>
@@ -51,8 +57,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<jatf.version>${project.version}</jatf.version>
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+		<spring-boot.version>${parent.version}</spring-boot.version>
         <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
 	</properties>
