--- a/jatf-core/pom.xml
+++ b/jatf-core/pom.xml
@@ -43,12 +43,12 @@
 		<version>1.0.7-SNAPSHOT</version>
 	</parent>
 
-    <properties>
-        <db.user>${project.artifactId}-db</db.user>
-        <db.password>${project.artifactId}-db!</db.password>
-    </properties>
+	<properties>
+		<db.user>${project.artifactId}-db</db.user>
+		<db.password>${project.artifactId}-db!</db.password>
+	</properties>
 
-    <dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -71,48 +71,49 @@
 		<dependency>
 			<groupId>com.github.javaparser</groupId>
 			<artifactId>javaparser-core</artifactId>
-            <version>3.5.16</version>
+			<version>3.5.16</version>
 		</dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.sourceforge.jtds</groupId>
-            <artifactId>jtds</artifactId>
-        </dependency>
-        <dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.jtds</groupId>
+			<artifactId>jtds</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
-    <profiles>
-        <profile>
-            <id>db-mssql-local</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <db.driver>net.sourceforge.jtds.jdbc.Driver</db.driver>
-                <db.url>
-                    jdbc:jtds:sqlserver://localhost:1433;Instance=MSSQLSERVER;DatabaseName=${project.artifactId}-db
-                </db.url>
-            </properties>
-        </profile>
-    </profiles>
+	<profiles>
+		<profile>
+			<id>db-mssql-local</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<db.driver>net.sourceforge.jtds.jdbc.Driver</db.driver>
+				<db.url>
+					jdbc:jtds:sqlserver://localhost:1433;DatabaseName=${project.artifactId}-db
+				</db.url>
+				<hibernate.dialect>org.hibernate.dialect.SQLServerDialect</hibernate.dialect>
+			</properties>
+		</profile>
+	</profiles>
 
-    <build>
+	<build>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
