--- a/jatf-core/pom.xml
+++ b/jatf-core/pom.xml
@@ -40,12 +40,14 @@
   <parent>
     <groupId>com.github.duke2k.jatf</groupId>
     <artifactId>jatf-project</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
 
   <properties>
     <db.user>${project.artifactId}-db</db.user>
     <db.password>${project.artifactId}-db!</db.password>
+    <reflections.version>0.9.11</reflections.version>
+    <javaparser.version>3.14.4</javaparser.version>
   </properties>
 
   <dependencies>
@@ -61,7 +63,7 @@
     <dependency>
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
-      <version>0.9.11</version>
+      <version>${reflections.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
@@ -71,7 +73,7 @@
     <dependency>
       <groupId>com.github.javaparser</groupId>
       <artifactId>javaparser-core</artifactId>
-      <version>3.5.16</version>
+      <version>${javaparser.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -103,6 +105,11 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
