--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <packaging>pom</packaging>
 
   <name>Java Architecture Test Framework</name>
-  <version>1.0.7-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
 
   <description>The Java Architecture Test Framework (JATF) allows static code analysis within unit tests. This is the
     root project, POM only.
@@ -56,10 +56,25 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+    <java.version>12</java.version>
     <jatf.version>${project.version}</jatf.version>
     <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
     <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+    <maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
   </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>${maven-scm-plugin.version}</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
