--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.5.RELEASE</version>
+    <version>2.4.5</version>
   </parent>
 
   <modules>
@@ -56,11 +56,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>12</java.version>
+    <java.version>11</java.version>
     <jatf.version>${project.version}</jatf.version>
-    <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
-    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-    <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+    <spring-boot.version>2.4.5</spring-boot.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
     <maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
   </properties>
 
