--- a/jatf-tests/pom.xml
+++ b/jatf-tests/pom.xml
@@ -46,6 +46,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <runSuites>**/All*Tests.class</runSuites>
+    <commons-io.version>2.6</commons-io.version>
   </properties>
 
   <dependencies>
@@ -53,6 +54,11 @@
       <groupId>com.github.duke2k.jatf</groupId>
       <artifactId>jatf-core</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>${commons-io.version}</version>
     </dependency>
   </dependencies>
 
